--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   get_storage: ^2.1.1
   percent_indicator: ^4.2.3
   connectivity_plus: ^3.0.3
+  html: ^0.15.2
+  hive: ^2.2.3
 
 dev_dependencies:
   flutter_test:
