--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,14 @@ dependencies:
   get_storage: ^2.1.1
   percent_indicator: ^4.2.3
   connectivity_plus: ^3.0.3
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
+  json_annotation: ^4.8.0
+  intl: ^0.17.0
+
+
 
 dev_dependencies:
-  hive_generator: ^2.0.0
   build_runner: ^2.3.3
+  json_serializable: ^6.6.1
   flutter_test:
     sdk: flutter
 
