--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,19 +37,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   path_provider: ^2.0.13
-  flutter_styled_toast: ^2.1.3
   talker_flutter: ^2.4.3
-  get_storage: ^2.1.1
   percent_indicator: ^4.2.3
   connectivity_plus: ^3.0.3
-  json_annotation: ^4.8.0
   intl: ^0.17.0
 
 
 
 dev_dependencies:
-  build_runner: ^2.3.3
-  json_serializable: ^6.6.1
   flutter_test:
     sdk: flutter
 
@@ -88,15 +83,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+  fonts:
+    - family: Orbitron
+      fonts:
+        - asset: assets/fonts/orbitron/Orbitron-Black.ttf
+        - asset: assets/fonts/orbitron/Orbitron-Bold.ttf
+        - asset: assets/fonts/orbitron/Orbitron-Regular.ttf
+    - family: EncodeSansSC_Condensed
+      fonts:
+        - asset: assets/fonts/encode/EncodeSansSC_Condensed-Light.ttf
+        - asset: assets/fonts/encode/EncodeSansSC_Condensed-Medium.ttf
+        - asset: assets/fonts/encode/EncodeSansSC_Condensed-Regular.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
