--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "node_server_maker" "\0"
+            VALUE "FileDescription", "API-Genius" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "node_server_maker" "\0"
+            VALUE "InternalName", "API-Genius" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
             VALUE "OriginalFilename", "node_server_maker.exe" "\0"
-            VALUE "ProductName", "node_server_maker" "\0"
+            VALUE "ProductName", "API-Genius" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
