--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   intl: ^0.17.0
   rename: ^2.1.1
   flutter_launcher_icons: ^0.12.0
+  talker_flutter: ^2.4.3
 
 dev_dependencies:
   flutter_test:
